# orchestrate-rs

./: 404.html  Cargo.toml  README.md  docker-compose.yml
monitoring/: docker-compose.yml
orchestrator/: Cargo.toml  Dockerfile
orchestrator/src/: main.rs  orchestrator.rs  serializers.rs
src/: index.html  main.rs
sub_services/sub_service_1/: Dockerfile  app.py
sub_services/sub_service_2/: Dockerfile  app.py  utils.py
sub_services/sub_service_3/: Dockerfile  app.py
