[package]
name = "rust_orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }          # Asynchronous runtime
reqwest = { version = "0.12.12", features = ["json"] }       # HTTP client
serde = { version = "1.0.217", features = ["derive"] }       # Serialization/Deserialization
serde_json = "1.0.137"                                       # JSON handling
tracing = "0.1.41"                                           # Logging
tracing-subscriber = "0.3.19"